k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: share-secret
  labels:
    app: share-secret
spec:
  type: ClusterIP
  selector:
    app: share-secret
  ports:
    - name: http
      port: 80
      targetPort: http
